<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/size_24dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingEnd="@dimen/size_24dp"
        android:paddingLeft="@dimen/size_12dp"
        android:paddingRight="@dimen/size_24dp"
        android:paddingStart="@dimen/size_12dp">

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/editorColorPrimary"
            tools:text="Vitamin C" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/pound_symbol"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/editorColorPrimary" />

            <TextView
                android:id="@+id/text_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/editorColorPrimary"
                tools:text="56.89" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_4dp"
                android:layout_marginRight="@dimen/size_4dp"
                android:fontFamily="sans-serif"
                android:text="@string/text_quantity"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/quantity_color" />

            <TextView
                android:id="@+id/text_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/quantity_color"
                tools:text="6" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_sell"
        style="@style/SaleButtonStyle"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/button_sell" />
</LinearLayout>